--- a/passportauth/package.json
+++ b/passportauth/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^4.13.18",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
+    "passport-github": "^1.1.0",
     "passport-github2": "^0.1.11",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0"
