--- a/blog-post/package.json
+++ b/blog-post/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.3",
+    "connect-flash-plus": "^0.2.1",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
